# particle-in-box-soln-fortran

./: .gitignore  Makefile  README.md  plot.gn
mods/: params.mod  variables.mod
scripts/: reader.py
src/: initializer.f95  main.f95  parameters.f95  params.mod  solver.f95  variables.mod  writer.f95
