set terminal png size 1200,650 enhanced font "Helvetica,15"
set output "output.png"

set xlabel "x"
set ylabel "psi(x) and |psi(x)|^2"
set title "Particle in Box Wave Function"
set key center top
plot 'data.dat' u 1:4 title "psi(x)" with lines linewidth 3,\
	 'data.dat' u 1:5 title "|psi()|^2" with lines linewidth 3

