set dgrid3d dim,dim
set mouse
set pm3d

set terminal qt 0
set xlabel "x"
set ylabel "y"
set zlabel "\psi"
set title "PIB Wave Function"
splot 'data.dat' u 1:2:4 title "\psi(x)" with dots;
pause -1

set terminal qt 1
set xlabel "x"
set ylabel "y"
set zlabel "\psi"
set title "PIB Electron Density"
splot 'data.dat' u 1:2:5 title "|\psi()|^2" with dots;
pause -1
